@@ -1,5 +1,8 @@
 Version 1.1.0
 ------------------------------------------------------------------------
+24 April 2008
++ Finished multiple approve/remove
+
 23 April 2008
 + Comments now allows comment approval. (multiple approval not
   finished)
